--- a/www/application/views/TestDocuments/testjadwaldosen.html
+++ b/www/application/views/TestDocuments/testjadwaldosen.html
@@ -1,5 +1,6 @@
 
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testGetAllJadwal</td>
@@ -16,8 +17,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testGetJadwalByUserName</td>
@@ -34,8 +44,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testGetNamaHari</td>
@@ -52,8 +71,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testGetNamaBulan</td>
@@ -70,8 +98,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testKolomKeHari</td>
@@ -88,8 +125,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testHariKeKolom</td>
@@ -106,8 +152,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testCekJadwalByJamMulai</td>
@@ -124,8 +179,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testAddJadwal</td>
@@ -142,8 +206,17 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
-<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+<table border="0"  cellpadding="4" cellspacing="1">
+
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
 		<td style="border-bottom:1px solid #CCC;">testUpdateJadwal</td>
@@ -160,4 +233,12 @@
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
 		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
 	</tr>
+        <tr>
+                <td></td>
+                <td></td>
+        </tr>
+ 
+        <br>
+ 
+
 </table>
